# deepmed

./: LICENSE  Pipfile  README.md  setup.cfg  test_experiment.py
deepest_histology/: __init__.py  config.py  evaluate.py  experiment.py  experiment_imports.py  subgroups.py  utils.py
deepest_histology/basic/: __init__.py  coordinator.py  data.py  deploy.py  evaluate.py  get_runs.py  train.py
deepest_histology/crossval/: __init__.py  coordinator.py  evaluate.py  get_experiments.py  get_runs.py
deepmed/: __init__.py  _deploy.py  _experiment.py  _load.py  _train.py  experiment_imports.py  extract_features.py  metrics.py  mil.py  multi_input.py  on_features.py  types.py  utils.py
deepmed/evaluators/: __init__.py  adapters.py  aggregate_stats.py  gradcam.py  heatmap.py  metrics.py  roc.py  top_tiles.py  types.py
deepmed/get/: __init__.py  _crossval.py  _extract_features.py  _multi_target.py  _parameterize.py  _simple.py  _subgroup.py
docs/source/: conf.py  deepest_histology.get.rst  deepest_histology.rst  deepmed.get.rst  deepmed.rst  index.rst  modules.rst  simple_training.rst  users_guide.rst
examples/: continuous.py  crossval.py  deploy_only.py  extract-with-custom-model.py  extract.py  extract_features.py  mil.py  multi_target_crossval.py  multi_target_deploy.py  multi_target_train.py  parameterize.py  subgroup.py  train_and_deploy.py  train_only.py
src/deepest_histology/: __init__.py  _deploy.py  _experiment.py  _load.py  _train.py  deploy.py  evaluate.py  experiment.py  experiment_imports.py  metrics.py  multi_input.py  train.py  types.py  utils.py
src/deepmed/: __init__.py  experiment_imports.py  metrics.py  types.py
test/: __init__.py  test.py  test_examples.py  test_simple.py
(+27 files in other folders)
