[metadata]
name = deepest-histology-katherlab
version = 0.0.1
author = Marko van Treeck
author_email = markovantreeck@gmail.com
description = A pipeline for training networks for the analysis of histological images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch
    pandas
    sklearn
    torchvision
    tqdm
    xlrd
    openpyxl
    matplotlib
    fastai
	pandas==1.2.4

[options.packages.find]
where = src
