[metadata]
name = deepmed-katherlab
version = 0.9.dev6
author = Marko van Treeck
author_email = markovantreeck@gmail.com
description = A pipeline for training networks for the analysis of histological images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KatherLab/deepmed
project_urls =
    Bug Tracker = https://github.com/KatherLab/deepmed/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch
    pandas
    sklearn
    torchvision
    tqdm
    xlrd
    openpyxl
    matplotlib
    fastai
    pandas~=1.3
    coloredlogs
    openslide-python
    packaging
